@@ -824,17 +824,17 @@ public class TokenMetadata
                 long startedAt = System.currentTimeMillis();
 
                 // create clone of current state
-                BiMultiValMap<Token, InetAddress> bootstrapTokens = new BiMultiValMap<>();
-                Set<InetAddress> leavingEndpoints = new HashSet<>();
-                Set<Pair<Token, InetAddress>> movingEndpoints = new HashSet<>();
+                BiMultiValMap<Token, InetAddress> bootstrapTokensClone = new BiMultiValMap<>();
+                Set<InetAddress> leavingEndpointsClone = new HashSet<>();
+                Set<Pair<Token, InetAddress>> movingEndpointsClone = new HashSet<>();
                 TokenMetadata metadata;
 
                 lock.readLock().lock();
                 try
                 {
-                    bootstrapTokens.putAll(this.bootstrapTokens);
-                    leavingEndpoints.addAll(this.leavingEndpoints);
-                    movingEndpoints.addAll(this.movingEndpoints);
+                    bootstrapTokensClone.putAll(this.bootstrapTokens);
+                    leavingEndpointsClone.addAll(this.leavingEndpoints);
+                    movingEndpointsClone.addAll(this.movingEndpoints);
                     metadata = this.cloneOnlyTokenMap();
                 }
                 finally
@@ -842,8 +842,8 @@ public class TokenMetadata
                     lock.readLock().unlock();
                 }
 
-                pendingRanges.put(keyspaceName, calculatePendingRanges(strategy, metadata, bootstrapTokens,
-                                                                       leavingEndpoints, movingEndpoints));
+                pendingRanges.put(keyspaceName, calculatePendingRanges(strategy, metadata, bootstrapTokensClone,
+                                                                       leavingEndpointsClone, movingEndpointsClone));
                 long took = System.currentTimeMillis() - startedAt;
 
                 if (logger.isDebugEnabled())
